--- a/public/stylesheets/main/cart.scss
+++ b/public/stylesheets/main/cart.scss
@@ -1,9 +1,9 @@
 
 #paypal-button-container{
-    display: none;
+   // display: none;
 }
 #checkoutShrink{
-    display: none;
+   // display: none;
 }
 #productAddButton{
 
