client dashboard link, editor fix  deleting status

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,6 +36,7 @@
                
             </div>
             <div class="indexSpacerBottom"></div>
+            <div class="indexSpacerBottom"></div>
         </div>        
      <%- include('./config/navBar')%>
      
