fixed paths to fonts

--- a/public/stylesheets/sook/style.scss
+++ b/public/stylesheets/sook/style.scss
@@ -90,7 +90,7 @@ $textAltColor:white;
         width: 26%;
        margin-top: 20%;
   @media (min-width:400px){margin-top:5%} 
-@media screen and(min-width:900px) {
+@media (min-width:900px) {
 //  width:40%;
  // margin-left:30%
 }}
