--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -163,15 +163,15 @@
 
 @font-face {
   font-family: "combo";
-  src: url("../fonts/Grotesque/DarkerGrotesque-Light.ttf");
+  src: url("../../fonts/Grotesque/DarkerGrotesque-Light.ttf");
 }
 @font-face {
   font-family: "kScript";
-  src: url("../fonts/Vujahday/VujahdayScript-Regular.ttf");
+  src: url("../../fonts/Vujahday/VujahdayScript-Regular.ttf");
 }
 @font-face {
   font-family: "righteous";
-  src: url("../fonts/Combo/Combo-Regular.ttf");
+  src: url("../../fonts/Combo/Combo-Regular.ttf");
 }
 body {
   text-align: center;
