--- a/views/config/head.ejs
+++ b/views/config/head.ejs
@@ -7,5 +7,11 @@
 <!--GOOGLE-->
 <meta name="google-site-verification" content="Pvp74_YXTw6uwsBP-6pTFmbwnjXD7_zXP-WUG4FpWU8" />
 <!---->
-<style></style>
+<style>
+
+
+
+
+    
+</style>
 </head>
