--- a/views/productID.ejs
+++ b/views/productID.ejs
@@ -7,21 +7,21 @@
         <%- include('../views/config/header.ejs')%>
 
   <div class="eventBody">
-    <h2 class="h1Span"> <%=data[3][0].inventoryTitle%> Details :  <%= data[1][0].serviceName%></h2>
+    <h2 class="h1Span"> <%=data[3][0].inventoryTitle%> Details :  <%= prod.serviceName%></h2>
 </div>
 
         <!----LANDING PAGE CLASS IS GRID DISPLAY-->
         <!----LARGE SCREEN 4 GRID !!!! MEDIUM SCREEN 3 GRID !!!!! SMALL 2 and single GRID-->
- <%if(typeof data[1][0] == 'object'&& data[1][0].imgName){%>
-        <div id="imgPrev" style="z-index:-15" class="imgPreviewDiv"><img class="imgPreview" src="/<%= data[1][0].imgName%>" alt=""></div>
+ <%if(typeof prod == 'object'&& prod.imgName){%>
+        <div id="imgPrev" style="z-index:-15" class="imgPreviewDiv"><img class="imgPreview" src="/<%= prod.imgName%>" alt=""></div>
  <%}%>
         <div class="landingPage">
             <div class="eventBody">
-        <div onclick="enlarge()" style="background-image:url('/<%= data[1][0].imgName%>');" class="imgBox"></div> 
+        <div onclick="enlarge()" style="background-image:url('/<%= prod.imgName%>');" class="imgBox"></div> 
 
-        <div class="invPrice"><%= data[1][0].cost%></div> 
+        <div class="invPrice"><%= prod.cost%></div> 
         <div >
-            <h3><%= data[1][0].serviceDetails%></h3>
+            <h3><%= prod.serviceDetails%></h3>
             <h3><%=data[3][0].purchaseTerms%></h3>
             <h3><%=data[3][0].productLinkback%> <a href="/register"><span class="alert"> Contact Us </span></a>!!!
             </h3>
@@ -36,10 +36,10 @@
 
     <div>
         <form action="/addToCart" method="post">
-            <input name="prodId" hidden="true" value="<%= data[1][0]._id%>"></label>
-            <input name="prodName" hidden="true" value="<%= data[1][0].serviceName%>"></label>
-            <input name="prodPrice" hidden="true" value="<%= data[1][0].cost%>"></label>
-            <input name="prodImg" hidden="true" value="<%= data[1][0].imgName%>"></label>
+            <input name="prodId" hidden="true" value="<%= prod._id%>"></label>
+            <input name="prodName" hidden="true" value="<%= prod.serviceName%>"></label>
+            <input name="prodPrice" hidden="true" value="<%= prod.cost%>"></label>
+            <input name="prodImg" hidden="true" value="<%= prod.imgName%>"></label>
             <% if (typeof data.ejsData1 == 'object' && data.ejsData1) { %>
                 <button onclick="loading('adding to cart')" id="productAddButton" type="submit" value="submit()" ><h2>add to cart</h2></button>
                 <%}else{%>
