--- a/views/options.ejs
+++ b/views/options.ejs
@@ -92,6 +92,7 @@
           <input type="text" name="_id"value="<%=options[1]._id%>">
           <input type="text" name="imgType"value="bkgrdImage">
           <h2 style="margin: 0;">Step 1: Attach One Image</h2> 
+          <h2>**must be  .png format**</h2>
             <input type="file" accept="image/*" name="photo">
           <h2>Step 2: Submit</h2> 
             <button onclick="loading('adding post to home page')" type="submit" >Submit</button>
