--- a/public/stylesheets/sook/style.css
+++ b/public/stylesheets/sook/style.css
@@ -171,15 +171,15 @@
 
 @font-face {
   font-family: "combo";
-  src: url("../fonts/Grotesque/DarkerGrotesque-Light.ttf");
+  src: url("../../fonts/Grotesque/DarkerGrotesque-Light.ttf");
 }
 @font-face {
   font-family: "kScript";
-  src: url("../fonts/Vujahday/VujahdayScript-Regular.ttf");
+  src: url("../../fonts/Vujahday/VujahdayScript-Regular.ttf");
 }
 @font-face {
   font-family: "righteous";
-  src: url("../fonts/Combo/Combo-Regular.ttf");
+  src: url("../../fonts/Combo/Combo-Regular.ttf");
 }
 body {
   text-align: center;
@@ -309,7 +309,7 @@ button {
   margin: 1%;
   min-height: 28%;
   font-family: "combo";
-  font-size: 3rem;
+  font-size: 1.5rem;
 }
 button:hover {
   background-color: rgba(252, 207, 124, 0.888);
@@ -927,19 +927,14 @@ input:focus {
   animation: 0.6s ease-in 1 slidein;
   scroll-behavior: smooth;
 }
-.mainStyle:first-child {
-  margin-top: 12%;
-}
 @media screen and (min-width: 700px) {
   .mainStyle {
     width: 100%;
-    margin-top: 12%;
   }
 }
 @media screen and (min-width: 900px) {
   .mainStyle {
     width: 100%;
-    margin-top: 8%;
   }
 }
 
@@ -1179,19 +1174,21 @@ img.mainImg {
   position: fixed;
   display: grid;
   grid-template-columns: 3fr 1fr;
-  min-width: 100vw;
-  padding: 1%;
-  top: 0;
-  left: 0;
+  top: 1%;
+  left: 1%;
   display: flex;
   background-image: url("");
   background-repeat: no-repeat;
   background-clip: unset;
   background-size: contain;
   background-position-x: 85%;
-  background-color: rgba(97, 97, 97, 0.95);
+  background-color: black;
+  border: 3px solid #dcf6ff;
   z-index: 50;
   animation: logoMove 15s linear 0 infinite;
+  width: 50px;
+  border-radius: 50%;
+  height: 50px;
 }
 
 select {
@@ -1533,14 +1530,13 @@ th {
 
 .hamburger {
   z-index: 100;
-  min-width: 65px;
-  min-height: 54px;
+  width: 100%;
 }
 
 .hm {
   min-height: 8%;
-  min-width: 49%;
-  margin: 13%;
+  min-width: 80%;
+  margin: 22%;
   background-color: #dcf6ff;
   border: rgba(205, 202, 241, 0.857);
   transform-style: preserve-3d;
