--- a/views/config/loadScreen.ejs
+++ b/views/config/loadScreen.ejs
@@ -1,9 +1,12 @@
 <div id="loadScreen" class="loadScreen">
    
-    
+   <h4> Taking too Long? Reload Page ~ X </h4>
     <h2 id="loadMessage">Loading Data</h2>
     <div class="loadContainer"><div class="loadAnimate"></div></div>
     <div class="loadContainer"><div class="loadAnimate"></div></div>
     <div class="loadContainer"><div class="loadAnimate"></div></div>
+ 
+</div>
+<div>
 </div>
 
