--- a/public/stylesheets/sook/style.scss
+++ b/public/stylesheets/sook/style.scss
@@ -49,7 +49,7 @@ $textAltColor:white;
     margin: 0;
     padding: 0;
     //font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    background:linear-gradient(to right,$red,$yellow, $green,$blue);
+   background:linear-gradient(to right,$red,$yellow, $green,$green,$blue,$blue);
     color: $textAltColor;
   }
 
@@ -87,8 +87,8 @@ $textAltColor:white;
       transform-style: preserve-3d;
       transition-duration: .6s;
       &_head{
-        width: 26%;
-       margin-top: 20%;
+        width: 90%;
+     //  margin-top: 20%;
   @media (min-width:400px){margin-top:5%} 
 @media (min-width:900px) {
 //  width:40%;
@@ -289,13 +289,13 @@ min-width: 100vw;
 //background Img Style
 img.okImg,video.okImg{
   animation: 120s ease-in-out infinite slowMove;
-  position:fixed;
-  top: 0;
-  left: 0;
+ position:fixed;
+ // top: 0;
+ left: -12%;
   z-index: -1;
  // margin-top: 50%;
   //transform: rotate(0) translateY(-50%);
-  max-width: 194%;
+  width: 125%;
   filter: brightness(175%) contrast(103%);
   transform-style: preserve-3d;
   @include media.bkgdImg();
