--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -43,7 +43,7 @@
            
 <!--.toLocaleDateString()-->
 <tr>
-   <td style="border:1px dashed white"> <%=data[2][i].invData.companyId.split('|')[1]%></td>
+   <td style="border:1px dashed white"><a href="/clientDashboard/<%=data[2][i].invData.companyId.split('|')[0]%>"> <%=data[2][i].invData.companyId.split('|')[1]%></a></td>
    <td style="border:1px dashed white"> <%=data[2][i].invTotal%></td>
    <td style="border:1px dashed white"> <%=data[2][i].partialPayments%></td>
   <td style="border:1px dashed white"><%=data[2][i].due.toLocaleString()%></td>
@@ -94,7 +94,7 @@
    <td style="border:1px dashed white"> <%=data[2][i].invData.companyId.split('|')[1]%></td>
    <td style="border:1px dashed white"> <%=data[2][i].invTotal%></td>
 
-  <td style="border:1px dashed white"><%=new Date(data[2][i].paymentDate).toLocaleString()%></td>
+  <td style="border:1px dashed white"><%Date(data[2][i].paymentDate).toLocaleString()%></td>
   <td style="border:1px dashed white"><form action="/unPaid"method="post"><input hidden type="text"name="_id" value="<%=data[2][i]._id%>"><button>revert</button></form></td>
 </tr>
 
