hotfix servise detail input form

--- a/views/invoiceViewer.ejs
+++ b/views/invoiceViewer.ejs
@@ -42,7 +42,7 @@
           <td> <%=data[0][i].terms%></td>
           
           <td>
-            <%=data[0][i].serviceDetails%>
+            <%=data[0][i].serviceDetail%>
           </td>
           <tr>
 
